# macrotrace-lab

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  Makefile  PYTHON_API_DESIGN.md  PYTHON_DEVELOPMENT.md  PYTHON_PROJECT_ARCHITECTURE.md  PYTHON_SYSTEM_DESIGN_PATTERNS.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
.macrotrace-checkpoints/: reference-workflow-test.json
configs/: baseline-experiment.yaml  default.yaml  intervention-annual-cost-check.yaml
docs/: cli-reference.md  eval-design.md  experiment-protocol.md  getting-started.md  trace-schema.md
src/macrotrace/: cli.py  config.py  db.py  exceptions.py  logging_config.py  runs.py  scenarios.py  traces.py
src/macrotrace/adapters/: __init__.py  base.py  jsonl_import.py  openai_agents.py
src/macrotrace/diagnosis/: __init__.py
src/macrotrace/discovery/: __init__.py  pipeline.py
src/macrotrace/documents/: __init__.py  trace_document_builder.py
src/macrotrace/evals/: __init__.py  deterministic.py  engine.py  llm_judge.py
src/macrotrace/reporting/: __init__.py
src/macrotrace/runtime/: __init__.py  agents.py  fault_injection.py  reference_workflow.py  runner.py  tools.py
src/macrotrace/schemas/: __init__.py  eval.py  experiment.py  pattern.py  scenario.py  trace.py
src/macrotrace/tracing/: __init__.py  collector.py  normalizer.py  redaction.py
src/macrotrace/ui/: __init__.py
tests/unit/: test_adapters.py  test_cli.py  test_config.py  test_db.py  test_discovery.py  test_document_builder.py  test_evals.py  test_scenarios.py  test_schemas.py  test_workflow.py
