[project]
name = "macrotrace-lab"
version = "0.1.0"
description = "Small-Scale Macro-Evaluation System for Agentic Workflows"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rmax-ai" }]
readme = "README.md"

dependencies = [
    "pydantic >=2.5,<3.0",
    "pydantic-settings >=2.1,<3.0",
    "sqlmodel >=0.0.22,<1.0",
    "typer >=0.12,<1.0",
    "pyyaml >=6.0,<7.0",
    "structlog >=24.1,<25.0",
    "rich >=13.7,<14.0",
    "sentence-transformers >=3.0,<4.0",
    "umap-learn >=0.5,<1.0",
    "hdbscan >=0.8.38,<1.0",
    "scikit-learn >=1.5,<2.0",
    "numpy >=1.26,<2.0",
    "networkx >=3.3,<4.0",
    "streamlit >=1.36,<2.0",
    "plotly >=5.24,<6.0",
    "pandas >=2.2,<3.0",
    "tqdm >=4.66,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.3,<9.0",
    "pytest-cov >=5.0,<6.0",
    "ruff >=0.6,<1.0",
    "mypy >=1.11,<2.0",
    "hypothesis >=6.112,<7.0",
    "pre-commit >=3.8,<4.0",
]

[project.scripts]
macrotrace = "macrotrace.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T10", "FA", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["umap.*", "hdbscan.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that call LLM judges (deselect by default)",
    "integration: marks integration tests",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/macrotrace"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
